src/objects/INT_Movimiento_CIA__c.object
<CustomObject>
    <fields>
        <fullName>MOV_TXT_Perjudicado1_Poblacion__c</fullName>
        <label>Perjudicado (1): Población</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MOV_TXT_Perjudicado1_Provincia__c</fullName>
        <label>Perjudicado (1): Provincia</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MOV_TXT_Perjudicado1_Tipo_Documento__c</fullName>
        <label>Perjudicado (1): Tipo de Documento</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MOV_TXT_Perjudicado1_Tipo_Perjudicado__c</fullName>
        <label>Perjudicado (1): Tipo de Perjudicado</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MOV_TXT_Perjudicado1_Tipo_Via__c</fullName>
        <label>Perjudicado (1): Tipo de Vía</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MOV_TXT_Perjudicado2_Apellido1__c</fullName>
        <label>Perjudicado (2): Apellido 1</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MOV_TXT_Perjudicado2_Direccion__c</fullName>
        <label>Perjudicado (2): Dirección</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MOV_TXT_Perjudicado2_Nombre__c</fullName>
        <label>Perjudicado (2): Nombre</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MOV_TXT_Perjudicado2_Num_Documento__c</fullName>
        <label>Perjudicado (2): Nº de Documento</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MOV_TXT_Perjudicado2_Poblacion__c</fullName>
        <label>Perjudicado (2): Población</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MOV_TXT_Perjudicado2_Provincia__c</fullName>
        <label>Perjudicado (2): Provincia</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MOV_TXT_Perjudicado2_Tipo_Documento__c</fullName>
        <label>Perjudicado (2): Tipo de Documento</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MOV_TXT_Perjudicado2_Tipo_Perjudicado__c</fullName>
        <label>Perjudicado (2): Tipo de Perjudicado</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MOV_TXT_Perjudicado3_Apellido_1__c</fullName>
        <label>Perjudicado (3): Apellido 1</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MOV_TXT_Perjudicado3_Apellido_2__c</fullName>
        <label>Perjudicado (3): Apellido 2</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MOV_TXT_Perjudicado3_Direccion__c</fullName>
        <label>Perjudicado (3): Dirección</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MOV_TXT_Perjudicado3_Nombre__c</fullName>
        <label>Perjudicado (3): Nombre</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MOV_TXT_Perjudicado3_Num_Documento__c</fullName>
        <label>Perjudicado (3): Nº de Documento</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MOV_TXT_Perjudicado3_Poblacion__c</fullName>
        <label>Perjudicado (3): Población</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MOV_TXT_Perjudicado3_Provincia__c</fullName>
        <label>Perjudicado (3): Provincia</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MOV_TXT_Perjudicado3_Tipo_Documento__c</fullName>
        <label>Perjudicado (3): Tipo de Documento</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MOV_TXT_Perjudicado3_Tipo_Perjudicado__c</fullName>
        <label>Perjudicado (3): Tipo de Perjudicado</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MOV_TXT_Perjudicado_Existe__c</fullName>
        <description>Campo de envío en fichero a SC Siniestros</description>
        <label>Existe Perjudicado</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MOV_TXT_Presup_Importe__c</fullName>
        <label>Importe Presupuesto</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MOV_TXT_Presup_Origen__c</fullName>
        <description>Campo de envío de ficheros a SC Siniestros</description>
        <label>Origen Presupuesto</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MOV_TXT_Presup_Tipo__c</fullName>
        <description>Campo de envío a SC Siniestros</description>
        <label>Tipo Presupuesto</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MOV_TXT_Provincia__c</fullName>
        <label>Provincia</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MOV_TXT_Registro_Erroneo_Gar__c</fullName>
        <label>Registro Erroeno Garantias</label>
        <length>3800</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>MOV_TXT_Registro_Erroneo_Pol__c</fullName>
        <label>Registro Erroneo Polizas</label>
        <length>3800</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>MOV_TXT_Registro_Erroneo__c</fullName>
        <label>Registro Erróneo / Confirmación</label>
        <length>3800</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>MOV_TXT_Reparacion_Urgente__c</fullName>
        <label>Reparación Urgente</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MOV_TXT_Responsable_Siniestro__c</fullName>
        <label>Responsable Siniestro</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MOV_TXT_Rol_Asegurado__c</fullName>
        <description>Rol del Asegurado que se envía a la aseguradora</description>
        <label>Rol del Asegurado</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MOV_TXT_Siniestro_Consorciable__c</fullName>
        <label>Siniestro Consorciable</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MOV_TXT_Submodalidad__c</fullName>
        <description>Submodalidad</description>
        <label>Submodalidad</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MOV_TXT_Suplemento_Pdte__c</fullName>
        <description>Indicador de que el siniestro se ha abierto a una póliza con Suplemento pendiente</description>
        <label>Suplemento Pendiente (Póliza)</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MOV_TXT_Tipo_Actuacion_Desc__c</fullName>
        <label>Tipo de Actuación (Descripción)</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MOV_TXT_Tipo_Actuacion__c</fullName>
        <label>Tipo de Actuación</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MOV_TXT_Tipo_Encuesta__c</fullName>
        <label>Tipo de Encuesta</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MOV_TXT_Tipo_IVA__c</fullName>
        <description>Tipo de IVA aplicado en la factura</description>
        <label>Tipo de IVA</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MOV_TXT_Tipo_Movimiento_Desc__c</fullName>
        <label>Tipo de Movimiento (Descripción)</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MOV_TXT_Tipo_Movimiento__c</fullName>
        <label>Tipo de Movimiento</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MOV_TXT_Tipo_Producto__c</fullName>
        <label>Tipo de Producto</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MOV_TXT_Tipo_Rechazo__c</fullName>
        <description>Indica el tipo de rechazo del siniestro que se informará en ficheros de encuestas</description>
        <label>Tipo de Rechazo</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MOV_TXT_Tipo_Registro__c</fullName>
        <description>Tipo de Registro de Pagos enviado a la aseguradora vía ficheros.</description>
        <label>Tipo de Registro</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MOV_TXT_Total_Asistencias__c</fullName>
        <description>Total de Asistencias</description>
        <label>Número Total de Asistencias</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <label>Integraciones: Movimiento CIA</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>MOV_DAT_Fecha_Generacion__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>MOV_LKP_Caso__c</columns>
        <columns>MOV_LKP_Compania__c</columns>
        <columns>MOV_TXT_Accion__c</columns>
        <columns>MOV_SEL_Estado_Movimiento__c</columns>
        <columns>MOV_LKP_Bitacora__c</columns>
        <columns>MOV_TXT_Tipo_Movimiento__c</columns>
        <columns>MOV_TXT_Codigo_Modificacion__c</columns>
        <columns>MOV_SEL_Encuestador__c</columns>
        <columns>MOV_TXT_Desc_Error__c</columns>
        <columns>MOV_TXT_Tipo_Encuesta__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>Todos</label>
        <language>es</language>
    </listViews>
    <listViews>
        <fullName>Facturacion_PH</fullName>
        <columns>NAME</columns>
        <columns>MOV_TXT_Accion__c</columns>
        <columns>MOV_SEL_Estado_Movimiento__c</columns>
        <columns>MOV_LKP_Bitacora__c</columns>
        <columns>MOV_LKP_Compania__c</columns>
        <columns>MOV_DAT_Fecha_Generacion__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>MOV_TXT_Accion__c</field>
            <operation>equals</operation>
            <value>Facturacion_PH</value>
        </filters>
        <label>Facturacion PH</label>
        <language>es</language>
    </listViews>
    <listViews>
        <fullName>Movimientos_Patria</fullName>
        <columns>NAME</columns>
        <columns>MOV_TXT_Accion__c</columns>
        <columns>MOV_LKP_Bitacora__c</columns>
        <columns>MOV_LKP_Compania__c</columns>
        <columns>MOV_SEL_Estado_Movimiento__c</columns>
        <columns>MOV_DAT_Fecha_Generacion__c</columns>
        <columns>MOV_TXT_Num_Caso_HS__c</columns>
        <columns>MOV_TXT_Num_Poliza__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>MOV_LKP_Compania__c</field>
            <operation>equals</operation>
            <value>Patria Hispana</value>
        </filters>
        <filters>
            <field>MOV_SEL_Estado_Movimiento__c</field>
            <operation>equals</operation>
            <value>01</value>
        </filters>
        <label>Movimientos Patria No enviados</label>
        <language>es</language>
    </listViews>
    <nameField>
        <displayFormat>MOV{000000}</displayFormat>
        <label>Identificador</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Integraciones: Movimiento CIA</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>